# condition-ir

./: CHANGELOG.md  README.md  pyproject.toml
src/condition_ir/: __init__.py  cel_frontend.py  checked.py  codec.py  estree_backend.py  ir.py  python_backend.py  registry.py  solver.py  sql_backend.py  z3_backend.py
tests/: test_cel_checker.py  test_cel_string_escapes.py  test_cel_ternary_unification.py  test_cel_types.py  test_checked_condition_ir.py  test_condition_estree_backend.py  test_condition_ir.py  test_condition_ir_encoding.py  test_condition_ir_semantic_metadata.py  test_condition_python_backend.py  test_condition_solver_parity.py  test_condition_solver_temporal_ordering.py  test_condition_sql_backend.py  test_condition_z3_backend.py  test_temporal_conditions.py  test_z3_division_definedness.py  test_z3_registry_snapshot.py
